# diff-diff

./: CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  METHODOLOGY_REVIEW.md  README.md  ROADMAP.md  TODO.md  pyproject.toml
.claude/commands/: dev-checklists.md  docs-check.md  pre-merge-check.md  push-pr-update.md  read-feedback-revise.md  review-plan.md  revise-plan.md  submit-pr.md  worktree-ls.md  worktree-new.md  worktree-rm.md
.claude/hooks/: check-plan-review.sh  test-check-plan-review.sh
.github/codex/prompts/: pr_review.md
.github/workflows/: publish.yml  rust-test.yml
benchmarks/: run_benchmarks.py
benchmarks/R/: benchmark_didimputation.R  benchmark_stacked_did.R  benchmark_sunab.R  benchmark_synthdid.R  requirements.R
benchmarks/python/: benchmark_imputation.py  benchmark_stacked_did.py  benchmark_sun_abraham.py  benchmark_synthdid.py
carousel/: generate_v26_pdf.py
diff_diff/: __init__.py  _backend.py  bootstrap_utils.py  continuous_did.py  continuous_did_bspline.py  continuous_did_results.py  diagnostics.py  estimators.py  honest_did.py  imputation.py  imputation_bootstrap.py  imputation_results.py  prep.py  prep_dgp.py  pretrends.py  results.py  stacked_did.py  stacked_did_results.py  staggered.py  staggered_bootstrap.py  sun_abraham.py  synthetic_did.py  triple_diff.py  trop.py  twfe.py  two_stage.py  two_stage_bootstrap.py  two_stage_results.py  utils.py  visualization.py
docs/: benchmarks.rst  choosing_estimator.rst
docs/api/: imputation.rst  index.rst  results.rst  stacked_did.rst
docs/methodology/: REGISTRY.md  continuous-did.md
docs/tutorials/: 03_synthetic_did.ipynb  11_imputation_did.ipynb  12_two_stage_did.ipynb  13_stacked_did.ipynb  14_continuous_did.ipynb
rust/: Cargo.toml  build.rs
rust/src/: lib.rs  sdid_variance.rs  trop.rs  weights.rs
tests/: conftest.py  test_bootstrap_utils.py  test_ci_params.py  test_continuous_did.py  test_diagnostics.py  test_estimators.py  test_honest_did.py  test_imputation.py  test_methodology_callaway.py  test_methodology_continuous_did.py  test_methodology_sdid.py  test_methodology_triple_diff.py  test_methodology_twfe.py  test_power.py  test_rust_backend.py  test_stacked_did.py  test_staggered.py  test_sun_abraham.py  test_triple_diff.py  test_trop.py  test_two_stage.py  test_utils.py  test_visualization.py
