[package]
name = "diff_diff_rust"
version = "2.3.2"
edition = "2021"
description = "Rust backend for diff-diff DiD library"
license = "MIT"

[lib]
name = "diff_diff_rust"
# cdylib for Python extension, rlib for running tests
crate-type = ["cdylib", "rlib"]

[features]
default = []
# extension-module is only needed for cdylib builds, not for cargo test
extension-module = ["pyo3/extension-module"]

[dependencies]
# PyO3 0.22 supports Python 3.8-3.13
pyo3 = "0.22"
numpy = "0.22"
ndarray = { version = "0.16", features = ["rayon"] }
rand = "0.8"
rand_xoshiro = "0.6"
rayon = "1.8"

# Pure Rust linear algebra library - no external BLAS/LAPACK dependencies
# This enables Windows builds without Intel MKL complexity
faer = "0.24"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
